# example-flask

./: pyproject.toml
ci/docker/: Dockerfile
src/: main.py
