[tool.poetry]
name = "example-flask"
version = "0.1.0"
description = ""
authors = ["Vinicius Justino <justdgoncalves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
